po: update po/nl_NL/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-20 11:32+0000\n"
+"PO-Revision-Date: 2016-06-01 13:26+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -323,7 +323,7 @@ msgstr "Periodiek frequentie"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Support Recurring Intervals"
-msgstr "Ondersteun periodieke intervals"
+msgstr "Ondersteun periodieke intervallen"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Recurring Installments?"
@@ -3626,7 +3626,7 @@ msgid ""
 "The \"Contributions - Receipt (on-line)\" System Workflow Message Template provides content and formatting for the receipt.\n"
 "  You can modify it from <a href=\"%1\">Administer > Communications > Message Templates > System Workflow Messages</a>. You can also provide\n"
 "  specific messaging for contributions received via this contribution page using the \"Receipt Message\" field below."
-msgstr "Het sjabloon van het werkstroombericht \"Bijdragen - Ontvangst (online)\" verzorgt de inhoud en de opmaak van het ontvangstbericht.\n U kunt het <a href=\"%1\">hier</a> aanpassen.\n U kunt ook zorgen voor specifieke berichten voor ontvangen bijdragen via deze bijdragepagina door het onderstaande veld \"Ontvangsbevestiging\" te gebruiken."
+msgstr "Het sjabloon van het werkstroombericht \"Bijdragen - Ontvangst (online)\" verzorgt de inhoud en de opmaak van het ontvangstbericht.\n U kunt het <a href=\"%1\">hier</a> aanpassen.\n U kunt ook zorgen voor specifieke berichten voor ontvangen bijdragen via deze bijdragepagina door het onderstaande veld \"Ontvangstbevestiging\" te gebruiken."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Name of Receipt Sender"
@@ -4125,7 +4125,7 @@ msgid ""
 "contributions, membership signups and event registrations. You can use the "
 "Transaction ID field to record account+check number, bank transfer "
 "identifier, or other unique payment identifier."
-msgstr "Gebruik dit formulier om ontvangen betalingen vast te leggen voor 'later betalen' van online bijdragen, aanmeldingen voor lidmaatschap of evenementen. U kunt het transactie ID veld gebruiken om rekening / cheque nummer, banktransfer identifier of een ander uniek betalingskenmerk vast te leggen. "
+msgstr "Gebruik dit formulier om ontvangen betalingen vast te leggen voor 'later betalen' van online bijdragen, aanmeldingen voor lidmaatschap of evenementen. U kunt het veld transactie-id  gebruiken om het rekening / cheque-nummer, de banktransfer-identifier of een ander uniek betalingskenmerk vast te leggen. "
 
 #: templates/CRM/Contribute/Form/Task/Status.tpl
 msgid "Update Contribution Status"
@@ -5103,7 +5103,7 @@ msgstr "Transactie-id van de terugbetaling"
 #: CRM/Contribute/Form/Contribution.php
 msgid ""
 "Contribution submitted by a staff person using contributor's credit card"
-msgstr "Bijdragen gedaan door een staflid met gebruik van de creditcard van de contibuant"
+msgstr "Bijdragen gedaan door een staflid met gebruik van de creditcard van de contribuant"
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Invalid Membership"
@@ -5197,7 +5197,7 @@ msgstr "Ontvangstbevestiging - afdrukken of e-mailen"
 
 #: CRM/Contribute/Task.php
 msgid "Thank-you letters - print or email"
-msgstr "Bedankbrieven - afdrukken of e-maile"
+msgstr "Bedankbrieven - afdrukken of e-mailen"
 
 #: CRM/Contribute/Task.php
 msgid "Invoices - print or email"
@@ -5253,7 +5253,7 @@ msgstr "Gem."
 msgid ""
 "Note: if the correct payment method is not listed here (e.g. for in-kind "
 "donations) ask your administrator to add a new option to this list."
-msgstr "NB: Indien de goede betaalmethode hier ontbreekt (bijv. in-natura bijdrage) vraag dan aan de beheerder om deze optie toe te voegen."
+msgstr "NB: Indien de goede betaalmethode hier ontbreekt (bijv. bijdrage in natura) vraag dan aan de beheerder om deze optie toe te voegen."
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "INVOICE"
