po: update po/nl_NL/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/mailing.po
+++ b/po/nl_NL/mailing.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-31 18:23+0000\n"
+"PO-Revision-Date: 2016-06-01 14:09+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2443,7 +2443,7 @@ msgid ""
 "scheduled delivery date and time is past, ask the system administrator or "
 "technical support contact for your site to verify that the automated mailer "
 "task ('cron job') is running - and how frequently."
-msgstr "<strong>De verzending van deze mailing is nog niet gestart.</strong> Als de geplande aflevertijd verstreken is, vraag dan aan de beheerder of technische helpdesk van uw site om te controleren of de automatische mailtaak ('crontaak') loopt, en met welke frequentie."
+msgstr "<strong>De verzending van deze mailing is nog niet gestart.</strong> Als de geplande aflevertijd verstreken is, vraag dan aan de beheerder of technische helpdesk van uw site om te controleren of de automatische mailtaak ('cronjob') loopt, en met welke frequentie."
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Included"
