--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-31 20:02+0000\n"
+"PO-Revision-Date: 2016-06-01 19:01+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -5177,7 +5177,7 @@ msgstr "Het ingevoerde land is niet bekend binnen CiviCRM."
 msgid ""
 "County input value not in county table: The County value appears to be "
 "invalid. It does not match any value in CiviCRM table of counties."
-msgstr "De ingevoerde waarde voor streek komt niet voor in de County-tabel van CiviCRM: Het lijkt erop dat de waarde voor County ongeldig is."
+msgstr "De ingevoerde waarde voor streek komt niet voor in de County-tabel van CiviCRM: Het lijkt erop dat deze waarde ongeldig is."
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid "Geo code 1"
@@ -6340,33 +6340,33 @@ msgstr "Controleer uw instellingen"
 msgid ""
 "There is no valid smtp server setting. Click <a href='%1'>Administer >> "
 "System Setting >> Outbound Email</a> to set the SMTP Server."
-msgstr "Er is geen geldige smtp server ingesteld. Klik op  <a href='%1'>Beheer >> Systeem Instellingen >> Uitgaande e-mail</a>."
+msgstr "Er is geen geldige smtp server ingesteld. Klik op  <a href='%1'>Beheer >> Systeeminstellingen >> Uitgaande e-mail</a>."
 
 #: CRM/Core/Config.php
 msgid ""
 "There is no valid sendmail path setting. Click <a href='%1'>Administer >> "
 "System Setting >> Outbound Email</a> to set the sendmail server."
-msgstr "Er is geen geldige sendmail pad ingesteld. Klik op  <a href='%1'>Beheer >> Systeem Instellingen >> Uitgaande e-mail</a>."
+msgstr "Er is geen geldige sendmail pad ingesteld. Klik op  <a href='%1'>Beheer >> Systeeminstellingen >> Uitgaande e-mail</a>."
 
 #: CRM/Core/Config.php
 msgid ""
 "Outbound mail has been disabled. Click <a href='%1'>Administer >> System "
 "Setting >> Outbound Email</a> to set the OutBound Email."
-msgstr "Uitgaande e-mail is uitgeschakeld. Klik op  <a href='%1'>Beheer >> Systeem Instellingen >> Uitgaande e-mail</a>."
+msgstr "Uitgaande e-mail is uitgeschakeld. Klik op  <a href='%1'>Beheer >> Systeeminstellingen >> Uitgaande e-mail</a>."
 
 #: CRM/Core/Config.php
 msgid ""
 "There is no valid SMTP server Setting Or SendMail path setting. Click <a "
 "href='%1'>Administer >> System Setting >> Outbound Email</a> to set the "
 "OutBound Email."
-msgstr "Er is geen geldige smtp server OF Sendmail pad ingesteld. Klik op  <a href='%1'>Beheer >> Systeem Instellingen >> Uitgaande e-mail</a>."
+msgstr "Er is geen geldige smtp server OF Sendmail pad ingesteld. Klik op  <a href='%1'>Beheer >> Systeeminstellingen >> Uitgaande e-mail</a>."
 
 #: CRM/Core/Config.php
 msgid ""
 "There is no valid SMTP server Setting Or sendMail path setting. Click <a "
 "href='%1'>Administer >> System Setting >> Outbound Email</a> to set the "
 "OutBound Email."
-msgstr "Er is geen geldige smtp server OF Sendmail pad ingesteld. Klik op  <a href='%1'>Beheer >> Systeem Instellingen >> Uitgaande e-mail</a>."
+msgstr "Er is geen geldige smtp server OF Sendmail pad ingesteld. Klik op  <a href='%1'>Beheer >> Systeeminstellingen >> Uitgaande e-mail</a>."
 
 #: CRM/Core/Config.php
 msgid "Some modules define permissions, but the CMS cannot store them: %1"
@@ -7101,15 +7101,15 @@ msgstr "Is IM Facturering?"
 
 #: CRM/Core/DAO/Job.php CRM/Core/DAO/JobLog.php
 msgid "Job ID"
-msgstr "Taak-ID"
+msgstr "Job-id"
 
 #: CRM/Core/DAO/Job.php
 msgid "Job Domain"
-msgstr "Domein voor taak"
+msgstr "Job-domein"
 
 #: CRM/Core/DAO/Job.php
 msgid "Job Frequency"
-msgstr "Uitvoerfrequentie voor de taak"
+msgstr "Job-frequentie"
 
 #: CRM/Core/DAO/Job.php
 msgid "Last Run"
@@ -7117,11 +7117,11 @@ msgstr "Laatste uitvoering"
 
 #: CRM/Core/DAO/Job.php CRM/Core/DAO/JobLog.php
 msgid "Job Name"
-msgstr "Naam van de taak"
+msgstr "Job-naam"
 
 #: CRM/Core/DAO/Job.php
 msgid "Job Description"
-msgstr "Beschrijving van de taak"
+msgstr "Job-beschrijving"
 
 #: CRM/Core/DAO/Job.php
 msgid "API Entity"
@@ -7138,11 +7138,11 @@ msgstr "API Parameters"
 
 #: CRM/Core/DAO/Job.php
 msgid "Job Is Active?"
-msgstr "Taak ingeschakeld?"
+msgstr "Job ingeschakeld?"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Job Log ID"
-msgstr "Taaklog-ID"
+msgstr "Job-log-id"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Timestamp"
@@ -8643,13 +8643,13 @@ msgstr "Google Checkout"
 msgid ""
 "User Name is not set in the Administer CiviCRM &raquo; System Settings "
 "&raquo; Payment Processors."
-msgstr "Gebruikersnaam ontbreekt in Beheer CiviCRM &raquo; Systeem Instellingen &raquo; Betaalmethode"
+msgstr "Gebruikersnaam ontbreekt in Beheer CiviCRM &raquo; Systeeminstellingen &raquo; Betaalmethode"
 
 #: CRM/Core/Payment/Google.php CRM/Core/Payment/Moneris.php
 msgid ""
 "Password is not set in the Administer CiviCRM &raquo; System Settings "
 "&raquo; Payment Processors."
-msgstr "Wachtwoord ontbreekt in Beheer CiviCRM &raquo; Systeem Instellingen &raquo; Betaalmethode"
+msgstr "Wachtwoord ontbreekt in Beheer CiviCRM &raquo; Systeeminstellingen &raquo; Betaalmethode"
 
 #: CRM/Core/Payment/Google.php
 msgid "Invalid response code received from Google Checkout: %1"
@@ -8669,7 +8669,7 @@ msgstr "Download de Moneris mpgClasses.php file en plaats deze in de packages/Se
 msgid ""
 "Store ID is not set in the Administer CiviCRM &raquo; System Settings "
 "&raquo; Payment Processors."
-msgstr "Store ID is niet ingesteld in Beheer CiviCRM &raquo; Systeem Instellingen &raquo; Betaalmethode."
+msgstr "Store ID is niet ingesteld in Beheer CiviCRM &raquo; Systeeminstellingen &raquo; Betaalmethode."
 
 #: CRM/Core/Payment/PayJunction.php xml/templates/civicrm_data.tpl
 msgid "PayJunction"
@@ -10438,7 +10438,7 @@ msgid ""
 "To ensure that all of your custom data groups are available to Views, you "
 "may need to add the following key(s) to the db_prefix array in your "
 "settings.php file: '%1'."
-msgstr "Om er voor te zorgen dat al uw aangepaste groepen beschikbaar zijn voor <em>Views</em>Views, moet u mogelijk de volgende gegevens toevoegen aan het db_prefix array in uw settings.php file: '%1'."
+msgstr "Om er voor te zorgen dat al uw aangepaste groepen beschikbaar zijn voor <em>Views</em>, moet u mogelijk de volgende gegevens toevoegen aan het db_prefix array in uw settings.php file: '%1'."
 
 #: CRM/Custom/Form/MoveField.php
 msgid "Custom Field Move: %1"
@@ -12597,7 +12597,7 @@ msgstr "Instellingen"
 msgid ""
 "Warning: Debug is enabled in <a href=\"%1\">system settings</a>. This should"
 " not be enabled on production servers."
-msgstr "Waarschuwing: Debug is ingeschakeld in <a href='%1'>Systeem Instellingen</a>. Debug zou niet op productie server moeten worden gebruikt."
+msgstr "Waarschuwing: Debug is ingeschakeld in <a href='%1'>Systeeminstellingen</a>. Debug zou niet op productieserver moeten worden gebruikt."
 
 #: CRM/Utils/Check/Env.php
 msgid "Debug Mode"
@@ -12760,7 +12760,7 @@ msgid ""
 "(Administer CiviCRM &raquo; System Settings &raquo; Outbound Email), OR the "
 "FROM email address specifically configured for your contribution page or "
 "event. Possible causes are:"
-msgstr "Dit is waarschijnlijk een gevolg van een probleem in uw uitgaande e-mail instellingen (Beheer CiviCRM &raquo; Systeem Instellingen &raquo; Uitgaande e-mail), OF het VAN e-mailadres van uw bijdragepagina of evenement. Mogelijke oorzaken zijn:"
+msgstr "Dit is waarschijnlijk een gevolg van een probleem in uw uitgaande e-mail instellingen (Beheer CiviCRM &raquo; Systeeminstellingen &raquo; Uitgaande e-mail), OF het VAN e-mailadres van uw bijdragepagina of evenement. Mogelijke oorzaken zijn:"
 
 #: CRM/Utils/Mail.php
 msgid "Your SMTP Username or Password are incorrect."
@@ -14775,7 +14775,7 @@ msgid ""
 " this domain (e.g. subscribe and unsubscribe confirmations...). This Name "
 "and Email Address are also used as the default 'sender' values when you "
 "create a new CiviMail Mailing."
-msgstr "De afzendernaam ('From') en het e-mailadres worden gebruikt bij het automatisch versturen van e-mails in dit domein (zoals aanmeld- en afmeldbevestigingen). Deze gegevens worden standaard ook gebruikt bij het afmaken van een nieuwe mailing."
+msgstr "De afzendernaam ('From') en het e-mailadres worden gebruikt bij het automatisch versturen van e-mails in dit domein (zoals aanmeld- en afmeldbevestigingen). Deze gegevens worden standaard ook gebruikt bij het aanmaken van een mailing."
 
 #: templates/CRM/Contact/Form/Domain.hlp
 #: templates/CRM/Contact/Form/Task/Email.hlp
@@ -14792,7 +14792,7 @@ msgid ""
 " server accepts outgoing mail from CiviMail. If this field is left blank, "
 "the <code>From</code> email address will be used as the <code>Return-"
 "Path</code>."
-msgstr "Gebruik dit veld als u het <code>Retouradres</code> in de e-mail header wilt vullen met een vaste waarde (bijvoorbeeld:  <code>gebruiker@voorbeeld.nl</code>). Vul hier een volledig e-mailadres in dat behoort bij SMTP account in uw domein. Dit e-mailadres wordt niet getoond aan e-mail clients. Vraag aan uw SMTP provider welk adres moet worden ingevuld voor uitgaande e-mail (van CiviMail). Als u dit veld niet invult dan wordt hiervoor het <code>VAN</code> e-mail adres gebruikt."
+msgstr "Gebruik dit veld als u het <code>Retouradres</code> in de e-mail header wilt vullen met een vaste waarde (bijvoorbeeld:  <code>gebruiker@voorbeeld.nl</code>). Vul hier een volledig e-mailadres in dat behoort bij SMTP account in uw domein. Dit e-mailadres wordt niet getoond aan e-mail clients. Vraag aan uw SMTP provider welk adres moet worden ingevuld voor uitgaande e-mail (van CiviMail). Als u dit veld niet invult dan wordt hiervoor het <code>VAN</code> e-mailadres gebruikt."
 
 #: templates/CRM/Contact/Form/Domain.hlp
 msgid "Additional Fields"
@@ -16137,7 +16137,7 @@ msgid ""
 "Go to <a href='%1'>Administer CiviCRM &raquo; System Settings &raquo; SMS "
 "Providers</a> to add or edit the provider. Make sure these Providers are "
 "valid."
-msgstr "Ga naar <a href='%1'>Beheer CiviCRM &raquo; Systeem Instellingen &raquo; SMS Providers</a> om SMS providers toe te voegen of te wijzigen. Zorg ervoor dat dit geldige providers zijn."
+msgstr "Ga naar <a href='%1'>Beheer CiviCRM &raquo; Systeeminstellingen &raquo; SMS Providers</a> om SMS providers toe te voegen of te wijzigen. Zorg ervoor dat dit geldige providers zijn."
 
 #: templates/CRM/Contact/Form/Task/SMS.hlp
 msgid ""
@@ -17270,7 +17270,7 @@ msgstr "Gewone groepen"
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 msgid "%1 has joined or been added to these group(s)."
-msgstr "%1 is lid worden van of is toegevoegd aan deze groep(en)."
+msgstr "%1 is lid geworden van of is toegevoegd aan deze groep(en)."
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
@@ -17776,7 +17776,7 @@ msgid ""
 "fields' to the anonymous role if you want un-authenticated visitors to use "
 "this field. Use <a href='%1'>Search Preferences - Contact Reference "
 "Options</a> to control the fields included in the search results."
-msgstr "Als u dit veld wilt gaan gebruiken in een front-end profiel, evenement registratie of bijdrageformulier, dan dient u 'Beperk overzicht  tot groep' te selecteren of een 'Geavanceerd Filter' in te stellen (zodat u niet per ongeluk al uw contacten openbaar maakt). Gebruikers moeten minimaal een van de volgende rechten hebben 'access contact reference fields'  en 'access CiviCRM' om automatisch aanvullen van contacten te kunnen gebruiken. U kunt het recht 'access contact reference fields' toekennen aan anonieme gebruikers, als u wilt dat niet ingelogde gebruikers dit veld mogen gebruiken. Gebruik <a href='%1'>Zoeken Voorkeuren - Referentie Contact Opties</a> om de velden in te stellen die in het zoekresultaat getoond worden."
+msgstr "Als u dit veld wilt gaan gebruiken in een front-end profiel, evenement registratie of bijdrageformulier, dan dient u 'Beperk overzicht  tot groep' te selecteren of een 'Geavanceerd Filter' in te stellen (zodat u niet per ongeluk al uw contacten openbaar maakt). Gebruikers moeten minimaal een van de volgende rechten hebben 'access contact reference fields'  en 'access CiviCRM' om automatisch aanvullen van contacten te kunnen gebruiken. U kunt het recht 'access contact reference fields' toekennen aan anonieme gebruikers, als u wilt dat niet ingelogde gebruikers dit veld mogen gebruiken. Gebruik <a href='%1'>Zoekvoorkeuren - Referentie Contact Opties</a> om de velden in te stellen die in het zoekresultaat getoond worden."
 
 #: templates/CRM/Custom/Form/Field.tpl
 msgid "Filter by Group"
@@ -17969,7 +17969,7 @@ msgid ""
 "The Multi-value Custom Data Import Wizard allows you to easily upload data "
 "to populate multi-value custom data records (such as employment or education"
 " history) for existing contacts."
-msgstr "De Multi-value Specifieke velden importeer Wizard maakt het u mogelijk om eenvoudig gegevens te uploaden om multi-value specifieke velden (bijvoorbeeld werkervaring of genoten opleidingen) te registreren bij bestaande contacten."
+msgstr "De functie multi-value specifieke velden importeren maakt het u mogelijk om eenvoudig gegevens te uploaden om multi-value specifieke velden (bijvoorbeeld werkervaring of genoten opleidingen) te registreren bij bestaande contacten."
 
 #: templates/CRM/Custom/Import/Form/DataSource.tpl
 msgid ""
@@ -19331,7 +19331,7 @@ msgid ""
 "Click <strong>Submit Mass SMS/strong> to add this to the Mass SMS mailing "
 "queue. An automated task which runs periodically on your server processes "
 "mailings in the queue, and starts actually sending out your Mass SMS."
-msgstr "Klik op <strong>Verstuur massa-SMS</strong> om deze toe te voegen aan de wachtrij van de te versturen SMS-berichten. Een achtergrondtaak die periodiek uitgevoerd wordt zal de berichten dan gaan versturen."
+msgstr "Klik op <strong>Verstuur massa-SMS</strong> om deze toe te voegen aan de wachtrij van de te versturen SMS-berichten. Een achtergrondtaak, die periodiek uitgevoerd wordt, zal de berichten gaan versturen."
 
 #: templates/CRM/SMS/Form/Schedule.hlp
 msgid ""
@@ -19345,7 +19345,7 @@ msgid ""
 "being sent, ask the system administrator or technical support contact for "
 "your site to verify that the automated task (&quot;cron job&quot;) is "
 "running - and how frequently."
-msgstr "<strong>Foutopsporing</strong> - Als uw SMS niet verstuurd wordt, vraag dan de beheerder om te controleren of de taak (&quot;cron job&quot;) loopt en met welke frequentie."
+msgstr "<strong>Foutopsporing</strong> - Als uw SMS niet verstuurd wordt, vraag dan de beheerder om te controleren of de taak (&quot;cronjob&quot;) loopt en met welke frequentie."
 
 #: templates/CRM/SMS/Form/Schedule.tpl
 msgid ""
@@ -19383,7 +19383,7 @@ msgstr "Kies de SMS-provider voor deze massa-SMS uit de lijst."
 msgid ""
 "Go to <a href='%1'>Administer CiviCRM &raquo; System Settings &raquo; SMS "
 "Providers</a> to add or edit SMS Provider."
-msgstr "Ga naar <a href='%1'>Beheer CiviCRM &raquo; Systeem Instellingen &raquo; SMS Providers</a> om SMS providers toe te voegen of te wijzigen.."
+msgstr "Ga naar <a href='%1'>Beheer CiviCRM &raquo; Systeeminstellingen &raquo; SMS Providers</a> om SMS providers toe te voegen of te wijzigen.."
 
 #: templates/CRM/SMS/Form/Upload.hlp
 msgid ""
@@ -19743,7 +19743,7 @@ msgstr "Als de 'E-mail verificatie' optie is ingeschakeld, dan ontvangen de gebr
 msgid ""
 "This feature requires the 'Allow User Registration' setting to be 'Yes' in "
 "Joomla Global Configuration >> System Settings."
-msgstr "Voor deze functie is het nodig dat de optie 'Toestaan Gebruikersregistratie' is aangevinkt in Joomla Algemene  Instellingen >> Systeem Instellingen."
+msgstr "Voor deze functie is het nodig dat de optie 'Toestaan Gebruikersregistratie' is aangevinkt in Joomla Algemene  Instellingen >> Systeeminstellingen."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -20124,7 +20124,7 @@ msgstr "(stap %1 van %2)"
 
 #: templates/CRM/common/accesskeys.hlp
 msgid "Access Keys"
-msgstr "Toegangssleutels"
+msgstr "Sneltoetsen"
 
 #: templates/CRM/common/accesskeys.hlp
 msgid "Edit Contact (View Contact Summary Page)"
@@ -22767,7 +22767,7 @@ msgstr "Mailadres is niet geldig"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Mail routing error"
-msgstr "Mail routeer fout"
+msgstr "Mail routeringsfout"
 
 #: xml/templates/civicrm_data.tpl
 msgid "User inbox is full"
@@ -24430,7 +24430,7 @@ msgid ""
 "work, and will need to be re-configured (this includes sending CiviMail "
 "mailings, updating membership statuses, etc.).</strong> Refer to the <a "
 "href=\"%1\">online documentation</a> for detailed instructions."
-msgstr "Let op! CiviCRM 4.1 heeft een verbeterde manier van omgaan met cron jobs. Maar de nieuwe methode is NIET compatibel met oudere versies. <strong>Informeer uw systeem beheerder dat alle cronjobs met een relatie naar CiviCRM niet meer zullen werken en opnieuw ingesteld moeten worden (inclusief de verzending van mailings vanuit CiviMail, bijgewerkte lidmaatschap statussen, etc.)</strong>. Bekijk de <a href=\"%1\">online documentatie</a> voor gedetailleerde instructies."
+msgstr "Let op! CiviCRM 4.1 heeft een verbeterde manier van omgaan met cronjobs. Maar de nieuwe methode is NIET compatibel met oudere versies. <strong>Informeer uw systeem beheerder dat alle cronjobs met een relatie naar CiviCRM niet meer zullen werken en opnieuw ingesteld moeten worden (inclusief de verzending van mailings vanuit CiviMail, bijgewerkte lidmaatschap statussen, etc.)</strong>. Bekijk de <a href=\"%1\">online documentatie</a> voor gedetailleerde instructies."
 
 #: CRM/Upgrade/Incremental/php/FourOne.php
 msgid ""
