--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-31 19:01+0000\n"
+"PO-Revision-Date: 2016-06-01 14:11+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -4065,7 +4065,7 @@ msgid ""
 "that are not in Completed status prior to running the mailing cron job for "
 "the first time. This will ensure that test mailings are not actually sent "
 "out."
-msgstr "LET OP: U schakelt over van testomgeving (Opslaan in database) naar een productie-omgeving. Controleer Mailings > Gearchiveerde mailings, verwijder alle mailings die betrekking hebben op het testen en die nog niet afgerond zijn voordat u de mailing cron job voor de eerste keer uitvoert. Hiermee voorkomt u dat de test mailings worden verzonden."
+msgstr "LET OP: U schakelt over van testomgeving (Opslaan in database) naar een productie-omgeving. Controleer Mailings > Gearchiveerde mailings, verwijder alle mailings die betrekking hebben op het testen en die nog niet afgerond zijn voordat u de mailing cronjob voor de eerste keer uitvoert. Hiermee voorkomt u dat test-mailings worden verzonden."
 
 #: templates/CRM/Admin/Form/Setting/UF.tpl
 msgid "These settings define the CMS variables that are used with CiviCRM."
