--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-31 18:47+0000\n"
+"PO-Revision-Date: 2016-06-01 14:17+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -3094,7 +3094,7 @@ msgstr "Bij het wijzigen van inschrijvingen moet er een kolom in de invoer zijn 
 msgid ""
 "The Event Import Wizard allows you to easily upload event participation data"
 " such as event registrations from other applications into CiviCRM."
-msgstr "Met de wizard evenement importeren kunt u deelnemersgegevens zoals inschrijvingen voor evenementen uit andere applicaties gemakkelijk uploaden naar CiviCRM."
+msgstr "Met de functie evenement importeren kunt u deelnemersgegevens zoals inschrijvingen voor evenementen uit andere applicaties gemakkelijk uploaden naar CiviCRM."
 
 #: templates/CRM/Event/Import/Form/DataSource.tpl
 msgid ""
