--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-31 18:00+0000\n"
+"PO-Revision-Date: 2016-06-01 14:05+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -30,7 +30,7 @@ msgstr "Rapport exemplaar-id"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Domain ID"
-msgstr "Rapport Exemplaar Domein ID"
+msgstr "Rapport Exemplaar Domein-id"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Title"
@@ -94,7 +94,7 @@ msgstr "Voettekst individueel rapport"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Drilldown Report ID"
-msgstr "Doorklik Rapport ID"
+msgstr "Doorklik Rapport-id"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Instance is Reserved"
@@ -473,7 +473,7 @@ msgstr "Lidmaatschap #"
 
 #: CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Financial Account Code - Debit"
-msgstr "Financiële rekening code - Debit"
+msgstr "Financiële rekening code - Debet"
 
 #: CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Financial Account Code - Credit"
@@ -481,7 +481,7 @@ msgstr "Financiële rekening code - Credit"
 
 #: CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Financial Account Name - Debit"
-msgstr "Financiële rekening naam - Debit"
+msgstr "Financiële rekening naam - Debet"
 
 #: CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Financial Account Name - Credit"
