--- a/po/nl_NL/pledge.po
+++ b/po/nl_NL/pledge.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-20 06:58+0000\n"
+"PO-Revision-Date: 2016-06-01 14:08+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -639,7 +639,7 @@ msgstr "Uw sitebeheerder moet de taak configureren (Beheer > Systeeminstellingen
 msgid ""
 "Your site administrator must also configure a \"cron job\" (scheduled server"
 " task) to run this script."
-msgstr "Moet uw sitebeheerder ook een zgn. \"crontaak\" (geplande servertaak) configureren om dit script uit te voeren."
+msgstr "Uw sitebeheerder moet ook een zogenaamde \"cronjob\" (geplande servertaak) configureren om dit script uit te voeren."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
