--- a/po/es_MX/admin.po
+++ b/po/es_MX/admin.po
@@ -7,6 +7,7 @@
 # IndiraCornelio <indira.cornelio@gmail.com>, 2011
 # Joaquin Cardiel <orfeon@hotmail.com>, 2013
 # ixiam_jose <jrombini@hotmail.com>, 2012
+# juan barajas <juanito_feliz0123@hotmail.com>, 2016
 # Leonardo Ordonez Checa <leoxordonez@gmail.com>, 2011
 # Joaquin Cardiel <orfeon@hotmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-02 23:14+0000\n"
+"Last-Translator: juan barajas <juanito_feliz0123@hotmail.com>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -275,7 +276,7 @@ msgstr "La ruta Path debe de ser una dirección con formato válida de email."
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "Servidor"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
@@ -635,7 +636,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "Populate counties"
-msgstr ""
+msgstr "Llene los Condados"
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid "CiviCampaign Component Settings"
@@ -668,7 +669,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Invoice Prefix"
-msgstr ""
+msgstr "Nombre de la Factura"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter prefix to be display on PDF for invoice"
@@ -756,7 +757,7 @@ msgstr "Clasificación Individual del Formato de Nombre"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Enable Popup Forms"
-msgstr ""
+msgstr "Habilitar Formas emergentes"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Input Format"
@@ -921,11 +922,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Multisite.php
 msgid "Domain Group"
-msgstr ""
+msgstr "Grupo Dominante"
 
 #: CRM/Admin/Form/Preferences/Multisite.php
 msgid "Contacts created on this site are added to this group"
-msgstr ""
+msgstr "Los contactos creados en este sitio son añadidos en este grupo"
 
 #: CRM/Admin/Form/Preferences.php
 msgid "Your changes have been saved."
@@ -987,7 +988,7 @@ msgstr "El tipo de relación ha sido guardado."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email"
-msgstr ""
+msgstr "Enviar Correo Electronico"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email"
@@ -995,7 +996,7 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email or SMS"
-msgstr ""
+msgstr "Enviar correo electronico o mensaje SMS"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email or SMS"
@@ -1003,15 +1004,15 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send as"
-msgstr ""
+msgstr "Enviar como"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "before"
-msgstr ""
+msgstr "antes"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "after"
-msgstr ""
+msgstr "Luego"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Action Condition"
@@ -1023,23 +1024,23 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "From Email"
-msgstr ""
+msgstr "Del Correo electronico"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit to"
-msgstr ""
+msgstr "Limitar a"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Also include"
-msgstr ""
+msgstr "Incluye tambien"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit or Add Recipients"
-msgstr ""
+msgstr "Limitar o añadir Destinatarios"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit Options"
-msgstr ""
+msgstr "Limitar Opciones"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipient Roles"
@@ -1367,11 +1368,11 @@ msgstr "Configuración - Subir Directorios"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Temporary Files"
-msgstr ""
+msgstr "Archivos Temporales"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Images"
-msgstr ""
+msgstr "Imagenes"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Custom Files"
@@ -1379,7 +1380,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Custom Templates"
-msgstr ""
+msgstr "Planillas Personalizadas"
 
 #: CRM/Admin/Form/Setting/Path.php
 msgid "Custom PHP Path Directory"
@@ -1496,7 +1497,7 @@ msgstr "Usted ha seleccionado \"Desactivar Correo Electrónico Saliente\". No se
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Email Disabled"
-msgstr ""
+msgstr "Correo Electronico Dehabilitado"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "You have selected \"Redirect to Database\". A test email can not be sent."
@@ -1958,7 +1959,7 @@ msgstr ""
 
 #: CRM/Admin/Page/LabelFormats.php
 msgid "Name Badge"
-msgstr ""
+msgstr "Nombre del Gafete"
 
 #: CRM/Admin/Page/LocationType.php
 msgid "Edit Location Type"
@@ -2209,25 +2210,25 @@ msgstr ""
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After your site has migrated to a new URL."
-msgstr ""
+msgstr "Luego de que su sitio haya sido migrado a una nueva URL"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has migrated to a new URL."
-msgstr ""
+msgstr "Luego de que su aplicacion haya migrado a una nueva URL"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has changed permission requirements."
-msgstr ""
+msgstr "Luego de que la aplicacion haya cambiado los requerimientos de acceso"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has a major failure or reset."
-msgstr ""
+msgstr "Luego de que la aplicacion haya tenido una falla major o haya sido reseteada"
 
 #: ang/crmCxn/Connectivity.html
 msgid ""
 "There was a problem verifying that this site is available on the public "
 "Internet."
-msgstr ""
+msgstr "Hubo un problema al verificar la disponibilidad de este sitio en el Internet Publico"
 
 #: ang/crmCxn/Connectivity.html
 msgid "See also:"
@@ -2299,11 +2300,11 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Disconnect"
-msgstr ""
+msgstr "Desconectar"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "New Connections"
-msgstr ""
+msgstr "Nuevas Conecciones"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
@@ -2315,7 +2316,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "No available applications"
-msgstr ""
+msgstr "No hay aplicaciones disponibles"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Application List Unavailable"
