--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -29,6 +29,7 @@
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# ShevAbam, 2016
 # SR71 <ben.alard@gmail.com>, 2012
 # tonthon <tonthon21@gmail.com>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
@@ -42,8 +43,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-02 14:17+0000\n"
+"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -13118,11 +13119,11 @@ msgstr ""
 
 #: ang/crmAttachment/attachments.html
 msgid "Add file:"
-msgstr ""
+msgstr "Ajouter un fichier : "
 
 #: ang/crmAttachment/attachments.html
 msgid "Alternatively, you may add new files using drag/drop."
-msgstr ""
+msgstr "Vous pouvez aussi ajouter des nouveaux fichiers par glisser/déposer."
 
 #: ang/crmAttachment.js
 msgid "Attachment failed"
@@ -25160,7 +25161,7 @@ msgstr ""
 
 #: CRM/Core/DAO/ActionLog.php
 msgid "Schedule"
-msgstr ""
+msgstr "Planification"
 
 #: CRM/Core/DAO/ActionLog.php
 msgid "Action Date And Time"
@@ -26439,7 +26440,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "This week"
-msgstr ""
+msgstr "Cette semaine"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This calendar month"
@@ -26451,7 +26452,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "This fiscal year"
-msgstr ""
+msgstr "Cette année fiscale"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This calendar year"
@@ -26459,7 +26460,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous week"
-msgstr ""
+msgstr "Semaine précédente"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Previous calendar month"
@@ -26507,7 +26508,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next week"
-msgstr ""
+msgstr "Semaine prochaine"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Next calendar month"
