po: update po/it_IT/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/common-base.po
+++ b/po/it_IT/common-base.po
@@ -7,6 +7,7 @@
 # Antonio de Simone <antonio.benson@gmail.com>, 2012
 # dpedercini <dpedercini@libero.it>, 2013-2014
 # Fortarrigo Piccolomini <info@sinergicamente.eu>, 2014
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # Francesco Moretto <francesco@moretto.it>, 2011
 # Claudio <info@clod.eu>, 2012
 # Marco Mapelli <marco.mapelli@slamservice.it>, 2015
@@ -21,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-03 00:13+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -142,7 +143,7 @@ msgstr "Tutti"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL ID"
-msgstr ""
+msgstr "ID ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Name"
@@ -154,12 +155,12 @@ msgstr ""
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Entity"
-msgstr ""
+msgstr "Entità ACL"
 
 #: CRM/ACL/DAO/ACL.php CRM/Core/DAO/EntityTag.php
 #: CRM/Core/DAO/RecurringEntity.php
 msgid "Entity ID"
-msgstr ""
+msgstr "ID Entità"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Operation"
@@ -167,11 +168,11 @@ msgstr ""
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Object"
-msgstr ""
+msgstr "Oggetto ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Object ID"
-msgstr ""
+msgstr "ID Oggetto ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Table"
@@ -196,7 +197,7 @@ msgstr ""
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Role ID"
-msgstr ""
+msgstr "ID Ruolo ACL"
 
 #: CRM/ACL/DAO/EntityRole.php CRM/Core/DAO/ActionLog.php
 #: CRM/Core/DAO/Discount.php CRM/Core/DAO/EntityFile.php
@@ -218,7 +219,7 @@ msgstr ""
 
 #: CRM/ACL/Form/ACL.php
 msgid "ACL"
-msgstr ""
+msgstr "ACL"
 
 #: CRM/ACL/Form/ACL.php CRM/Activity/Import/Form/MapField.php
 #: CRM/Activity/Selector/Activity.php CRM/Contact/Form/Domain.php
@@ -386,11 +387,11 @@ msgstr "La ACL selezionata è stata eliminata."
 #: templates/CRM/Contact/Page/View/CustomData.tpl
 #: templates/CRM/Custom/Page/CustomDataView.tpl
 msgid "Record Deleted"
-msgstr ""
+msgstr "Record Cancellato"
 
 #: CRM/ACL/Form/ACLBasic.php
 msgid "ACL Type"
-msgstr "Tipo di controllo accessi"
+msgstr "Tipo ACL"
 
 #: CRM/ACL/Form/ACLBasic.php
 msgid "Role is a required field"
@@ -541,7 +542,7 @@ msgstr "(destinatari)"
 
 #: CRM/Activity/BAO/Activity.php
 msgid "(%1 recipients)"
-msgstr ""
+msgstr "(%1 destinatari)"
 
 #: CRM/Activity/BAO/Activity.php CRM/Activity/Import/Form/MapField.php
 #: CRM/Activity/Import/Parser.php CRM/Contact/BAO/Contact.php
@@ -562,11 +563,11 @@ msgstr "Iscrizione"
 
 #: CRM/Activity/BAO/Activity.php
 msgid "Source Contact ID"
-msgstr ""
+msgstr "ID Fonte Contatto"
 
 #: CRM/Activity/BAO/Activity.php CRM/Activity/Import/Parser/Activity.php
 msgid "Source Contact"
-msgstr "Contatto fonte"
+msgstr "Fonte Contatto"
 
 #: CRM/Activity/BAO/Activity.php CRM/Activity/Form/Activity.php
 #: CRM/Activity/Selector/Activity.php
@@ -627,7 +628,7 @@ msgstr "Attività Assegnatario"
 #: CRM/Activity/BAO/Query.php CRM/Contact/BAO/Query.php
 #: CRM/Core/BAO/CustomQuery.php
 msgid "%1 %2 %3"
-msgstr ""
+msgstr "%1 %2 %3"
 
 #: CRM/Activity/BAO/Query.php xml/templates/civicrm_data.tpl
 msgid "Survey"
@@ -736,7 +737,7 @@ msgstr "Con"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Added by"
-msgstr ""
+msgstr "Aggiunto da"
 
 #: CRM/Activity/BAO/Query.php CRM/Activity/DAO/Activity.php
 #: CRM/Activity/Form/Activity.php CRM/Activity/Selector/Activity.php
@@ -882,7 +883,7 @@ msgstr "Contact ID (Identificativo contatto - corrisponde al contatto)"
 
 #: CRM/Activity/DAO/ActivityContact.php
 msgid "Record Type ID"
-msgstr ""
+msgstr "ID Tipo Record"
 
 #: CRM/Activity/Form/Activity.php CRM/Activity/Form/Task/Batch.php
 #: CRM/Activity/Selector/Activity.php CRM/Activity/Selector/Search.php
@@ -918,7 +919,7 @@ msgstr "Non hai i permessi sufficienti per visualizzare questa pagina."
 
 #: CRM/Activity/Form/Activity.php
 msgid "%1 Activity"
-msgstr ""
+msgstr "%1 Attività"
 
 #: CRM/Activity/Form/Activity.php CRM/Contact/Form/Contact.php
 #: templates/CRM/Contact/Page/Inline/ContactName.tpl
@@ -967,7 +968,7 @@ msgstr "Inserire l'Indice Impegni come valore numerico (solo numeri interi)."
 
 #: CRM/Activity/Form/Activity.php
 msgid "Create a separate activity for each contact."
-msgstr ""
+msgstr "Crea un'attività separata per ogni contatto."
 
 #: CRM/Activity/Form/Activity.php CRM/Core/BAO/UFGroup.php
 msgid "Please enter the duration as number of minutes (integers only)."
@@ -1082,7 +1083,7 @@ msgstr ""
 #: CRM/SMS/Form/Group.php CRM/SMS/Form/Schedule.php CRM/Tag/Form/Tag.php
 #: js/Common.js js/crm.ajax.js templates/CRM/Contact/Page/View/Summary.js
 msgid "Saved"
-msgstr ""
+msgstr "Salvato"
 
 #: CRM/Activity/Form/ActivityFilter.php CRM/Core/SelectValues.php
 msgid "Include"
@@ -1099,12 +1100,12 @@ msgstr "Escludi"
 
 #: CRM/Activity/Form/ActivityFilter.php
 msgid "- select activity type -"
-msgstr ""
+msgstr "- seleziona tipo attività -"
 
 #: CRM/Activity/Form/ActivityLinks.php CRM/Activity/Page/AJAX.php
 #: CRM/Contact/BAO/Contact.php
 msgid "Send an Email"
-msgstr "Invia una email"
+msgstr "Invia un' Email"
 
 #: CRM/Activity/Form/ActivityLinks.php CRM/Contact/Form/Task/SMSCommon.php
 msgid "Send SMS"
@@ -1192,7 +1193,7 @@ msgstr[1] ""
 #: js/jquery/jquery.crmeditable.js js/view/crm.designer.js
 #: templates/CRM/UF/Form/Field.tpl
 msgid "Error"
-msgstr ""
+msgstr "Errore"
 
 #: CRM/Activity/Form/Task/FileOnCase.php CRM/Activity/Selector/Activity.php
 #: CRM/Activity/Task.php templates/CRM/Activity/Form/Activity.tpl
@@ -1556,15 +1557,15 @@ msgstr "Visualizza Contatto"
 
 #: CRM/Activity/Page/AJAX.php
 msgid "Reassign %1"
-msgstr ""
+msgstr "Riassegna %1"
 
 #: CRM/Activity/Page/AJAX.php
 msgid "Remove %1"
-msgstr ""
+msgstr "Rimuovi %1"
 
 #: CRM/Activity/Page/AJAX.php
 msgid "Assign %1"
-msgstr ""
+msgstr "Assegna %1"
 
 #: CRM/Activity/Page/AJAX.php
 msgid "(Filed on case %1)"
@@ -1728,7 +1729,7 @@ msgstr "Ricerca Attività CiviCrm"
 
 #: CRM/Activity/Task.php CRM/Contact/Task.php
 msgid "Print Selected Rows"
-msgstr ""
+msgstr "Stampa le Righe Selezionate"
 
 #: CRM/Activity/Task.php
 msgid "Export Activities"
@@ -1845,11 +1846,11 @@ msgstr "L'Immagine non può essere caricata a causa di un invalido formato."
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Contact image deleted successfully"
-msgstr ""
+msgstr "Immagine Contatto cancellata con successo"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Image Deleted"
-msgstr ""
+msgstr "Immagine Cancellata"
 
 #: CRM/Contact/BAO/Contact.php CRM/Core/BAO/UFGroup.php CRM/UF/Form/Field.php
 #: CRM/UF/Page/Field.php templates/CRM/Contact/Form/Search/Criteria/Basic.tpl
@@ -2077,7 +2078,7 @@ msgstr "Destinatari"
 
 #: CRM/Contact/BAO/Query.php
 msgid "%1 is not a valid operator"
-msgstr ""
+msgstr "%1 non è un operatore valido"
 
 #: CRM/Contact/BAO/Query.php CRM/Contact/Form/Search/Criteria.php
 msgid "Search in Trash"
@@ -2129,7 +2130,7 @@ msgstr "Non utente del CMS"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Tag %1 %2"
-msgstr ""
+msgstr "Tag %1 %2"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Tagged %1"
@@ -2176,7 +2177,7 @@ msgstr "Telefono"
 
 #: CRM/Contact/BAO/Query.php
 msgid "type"
-msgstr ""
+msgstr "tipo"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Street"
@@ -2286,11 +2287,11 @@ msgstr ""
 
 #: CRM/Contact/BAO/Query.php
 msgid "greater than or equal to"
-msgstr ""
+msgstr "maggiore o uguale a"
 
 #: CRM/Contact/BAO/Query.php
 msgid "less than or equal to"
-msgstr ""
+msgstr "minore o uguale a"
 
 #: CRM/Contact/BAO/Query.php CRM/Contact/Form/Search/Criteria.php
 #: CRM/Contact/Form/Search.php templates/CRM/common/displaySearchCriteria.tpl
@@ -2299,11 +2300,11 @@ msgstr "E"
 
 #: CRM/Contact/BAO/Query.php
 msgid "greater than"
-msgstr ""
+msgstr "maggiore di"
 
 #: CRM/Contact/BAO/Query.php
 msgid "less than"
-msgstr ""
+msgstr "minore di"
 
 #: CRM/Contact/BAO/Query.php
 #: CRM/Contact/Form/Search/Custom/FullText/Contribution.php
@@ -2551,7 +2552,7 @@ msgstr "Data di Creazione"
 
 #: CRM/Contact/DAO/ContactType.php
 msgid "Contact Type ID"
-msgstr ""
+msgstr "ID Tipo Contatto"
 
 #: CRM/Contact/DAO/ContactType.php
 msgid "Contact Type Label"
@@ -2559,11 +2560,11 @@ msgstr ""
 
 #: CRM/Contact/DAO/ContactType.php
 msgid "Contact Type Description"
-msgstr ""
+msgstr "Descrizione Tipo Contatto"
 
 #: CRM/Contact/DAO/ContactType.php
 msgid "Contact Type Image URL"
-msgstr ""
+msgstr "URL Immagine Tipo Contatto"
 
 #: CRM/Contact/DAO/ContactType.php
 msgid "Contact Type Parent"
@@ -2617,20 +2618,20 @@ msgstr ""
 
 #: CRM/Contact/DAO/Group.php CRM/Contact/DAO/GroupContact.php
 msgid "Group ID"
-msgstr ""
+msgstr "ID Gruppo"
 
 #: CRM/Contact/DAO/Group.php CRM/Contact/Form/Search/Custom/Group.php
 #: CRM/Core/DAO/Cache.php
 msgid "Group Name"
-msgstr "Nome del gruppo"
+msgstr "Nome Gruppo"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Title"
-msgstr ""
+msgstr "Titolo Gruppo"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Description"
-msgstr ""
+msgstr "Descrizione Gruppo"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Source"
@@ -2693,11 +2694,11 @@ msgstr ""
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Created By"
-msgstr ""
+msgstr "Gruppo Creato Da"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Modified By"
-msgstr ""
+msgstr "Gruppo Modificato Da"
 
 #: CRM/Contact/DAO/GroupContact.php
 msgid "Group Contact ID"
@@ -2742,38 +2743,38 @@ msgstr "Organizzazione"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Relationship ID"
-msgstr ""
+msgstr "ID Relazione"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Contact A"
-msgstr ""
+msgstr "Contatto A"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Contact B"
-msgstr ""
+msgstr "Contatto B"
 
 #: CRM/Contact/DAO/Relationship.php CRM/Contact/Form/Relationship.php
 #: CRM/Contact/Form/Search/Criteria.php
 #: CRM/Contact/Form/Task/AddToHousehold.php
 #: CRM/Contact/Form/Task/AddToOrganization.php
 msgid "Relationship Type"
-msgstr "Tipologia di Relazione"
+msgstr "Tipo di Relazione"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Relationship Start Date"
-msgstr ""
+msgstr "Data Inizio Relazione"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Relationship End Date"
-msgstr ""
+msgstr "Data Fine Relazione"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Relationship Is Active"
-msgstr ""
+msgstr "La Relazione è Attiva"
 
 #: CRM/Contact/DAO/Relationship.php CRM/Contact/DAO/RelationshipType.php
 msgid "Relationship Description"
-msgstr ""
+msgstr "Descrizione Relazione"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Contact A has Permission Over Contact B"
@@ -2789,7 +2790,7 @@ msgstr ""
 
 #: CRM/Contact/DAO/RelationshipType.php
 msgid "Relationship Type ID"
-msgstr ""
+msgstr "ID Tipo Relazione"
 
 #: CRM/Contact/DAO/RelationshipType.php
 msgid "Relationship Type Name A to B"
@@ -2947,15 +2948,15 @@ msgstr "Salva e Nuovo"
 #: CRM/Contact/Form/Contact.php CRM/Contact/Form/Merge.php
 #: CRM/Contact/Form/RelatedContact.php
 msgid "%1 has been updated."
-msgstr ""
+msgstr "%1 è stato aggiornato."
 
 #: CRM/Contact/Form/Contact.php CRM/Contact/Form/RelatedContact.php
 msgid "%1 has been created."
-msgstr ""
+msgstr "%1 è stato creato."
 
 #: CRM/Contact/Form/Contact.php CRM/Contact/Form/RelatedContact.php
 msgid "Contact Saved"
-msgstr ""
+msgstr "Contatto Salvato"
 
 #: CRM/Contact/Form/Contact.php CRM/Profile/Form.php
 msgid "One matching contact was found. "
@@ -3019,7 +3020,7 @@ msgstr ""
 
 #: CRM/Contact/Form/CustomData.php
 msgid "Save a Copy"
-msgstr ""
+msgstr "Salva una Copia"
 
 #: CRM/Contact/Form/DedupeFind.php
 msgid "- All Contacts -"
@@ -3042,7 +3043,7 @@ msgstr ""
 
 #: CRM/Contact/Form/DedupeRules.php templates/CRM/Contact/Page/DedupeRules.tpl
 msgid "Usage"
-msgstr ""
+msgstr "Utilizzo"
 
 #: CRM/Contact/Form/DedupeRules.php
 msgid "Reserved?"
@@ -3142,12 +3143,12 @@ msgstr "Indirizzo"
 #: CRM/Contact/Form/Edit/Address.php CRM/Core/DAO/Address.php
 #: xml/templates/civicrm_data.tpl
 msgid "Supplemental Address 1"
-msgstr ""
+msgstr "Indirizzo Supplementare 1"
 
 #: CRM/Contact/Form/Edit/Address.php CRM/Core/DAO/Address.php
 #: xml/templates/civicrm_data.tpl
 msgid "Supplemental Address 2"
-msgstr ""
+msgstr "Indirizzo Supplementare 2"
 
 #: CRM/Contact/Form/Edit/Address.php CRM/Contact/Form/Search/Criteria.php
 #: CRM/Contact/Form/Search/Custom/Basic.php
@@ -3201,7 +3202,7 @@ msgstr "Usare gli indirizzi di un altro contatto."
 
 #: CRM/Contact/Form/Edit/Address.php
 msgid "Share With"
-msgstr ""
+msgstr "Condividi Con"
 
 #: CRM/Contact/Form/Edit/Address.php
 msgid "Please select valid shared contact or a contact with valid address."
@@ -3321,7 +3322,7 @@ msgstr "Nel recapito principale si deve impostare nome e cognome O una email O u
 
 #: CRM/Contact/Form/Edit/Lock.php CRM/Contact/Form/Inline/Lock.php
 msgid "This record was modified by another user!"
-msgstr ""
+msgstr "Questo record è stato modificato da un altro utente!"
 
 #: CRM/Contact/Form/Edit/OpenID.php CRM/Core/DAO/OpenID.php
 #: templates/CRM/Contact/Page/Inline/OpenID.tpl
@@ -3385,7 +3386,7 @@ msgstr ""
 
 #: CRM/Contact/Form/GroupContact.php
 msgid "Added to Group"
-msgstr ""
+msgstr "Aggiunto al Gruppo"
 
 #: CRM/Contact/Form/Inline/ContactName.php
 msgid "Contact with no email must have a name."
@@ -3393,31 +3394,31 @@ msgstr ""
 
 #: CRM/Contact/Form/Inline/Email.php
 msgid "One email should be marked as primary."
-msgstr "Un indirizzo email dovrebbe essere contrassegnato come principale."
+msgstr "Un indirizzo email dovrebbe essere marcato come principale."
 
 #: CRM/Contact/Form/Inline/Email.php
 msgid "Only one email can be marked as primary."
-msgstr "Solo un indirizzo email può essere contrassegnato come principale."
+msgstr "Solo un indirizzo email può essere marcato come principale."
 
 #: CRM/Contact/Form/Inline/Email.php
 msgid "Contact with no name must have an email."
-msgstr ""
+msgstr "Un Contatto senza nome deve avere un indirizzo email."
 
 #: CRM/Contact/Form/Inline/IM.php
 msgid "One IM should be marked as primary."
-msgstr ""
+msgstr "Un IM dovrebbe essere marcato come principale."
 
 #: CRM/Contact/Form/Inline/IM.php
 msgid "Only one IM can be marked as primary."
-msgstr ""
+msgstr "Solo un IM può essere marcato come principale."
 
 #: CRM/Contact/Form/Inline/OpenID.php
 msgid "One OpenID should be marked as primary."
-msgstr ""
+msgstr "Un OpenID dovrebbe essere marcato come principale."
 
 #: CRM/Contact/Form/Inline/OpenID.php
 msgid "Only one OpenID can be marked as primary."
-msgstr ""
+msgstr "Solo un OpenID può essere marcato come principale."
 
 #: CRM/Contact/Form/Inline/Phone.php
 msgid "One phone should be marked as primary."
@@ -3531,19 +3532,19 @@ msgstr "Informazioni Contatto"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "View Relationship for %1"
-msgstr ""
+msgstr "Mostra Relazione per %1"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Add Relationship for %1"
-msgstr ""
+msgstr "Aggiungi Relazione per %1"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Edit Relationship for %1"
-msgstr ""
+msgstr "Modifica Relazione per %1"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Delete Relationship for %1"
-msgstr ""
+msgstr "Cancella Relazione per %1"
 
 #: CRM/Contact/Form/Relationship.php CRM/Core/Form.php
 msgid "- select %1 -"
@@ -3552,11 +3553,11 @@ msgstr ""
 #: CRM/Contact/Form/Relationship.php
 #: templates/CRM/Custom/Form/ContactReference.tpl
 msgid "- select contact -"
-msgstr ""
+msgstr "- seleziona contatto -"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Contact(s)"
-msgstr ""
+msgstr "Contatto(i)"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Current Employee"
@@ -3672,7 +3673,7 @@ msgstr "Svuotare il valore se si vuole usare l'operatore %1."
 
 #: CRM/Contact/Form/Search/Builder.php
 msgid "Please enter a value."
-msgstr ""
+msgstr "Per favore digita un valore."
 
 #: CRM/Contact/Form/Search/Builder.php CRM/Custom/Form/Option.php
 msgid "Please enter a valid value."
@@ -3726,7 +3727,7 @@ msgstr "Fonte Contatto"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Please enter valid Contact ID"
-msgstr ""
+msgstr "Per favore digita un ID Contatto valido"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "(deleted contacts)"
@@ -3851,7 +3852,7 @@ msgstr "Attivo"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Inactive"
-msgstr ""
+msgstr "Inattivo"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Relationship Status"
@@ -3872,7 +3873,7 @@ msgstr ""
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "From:"
-msgstr ""
+msgstr "Da:"
 
 #: CRM/Contact/Form/Search/Criteria.php CRM/Core/Resources.php
 #: xml/templates/civicrm_data.tpl
@@ -4157,7 +4158,7 @@ msgstr "Non esistono eventi con gruppi di prezzi"
 
 #: CRM/Contact/Form/Search/Custom/PriceSet.php
 msgid "Participant ID"
-msgstr ""
+msgstr "ID Partecipante"
 
 #: CRM/Contact/Form/Search/Custom/PriceSet.php
 msgid "Export Price Set Info for an Event"
@@ -4401,15 +4402,15 @@ msgstr ""
 
 #: CRM/Contact/Form/Task/AlterPreferences.php
 msgid "Added '%1'"
-msgstr ""
+msgstr "Aggiunto '%1'"
 
 #: CRM/Contact/Form/Task/AlterPreferences.php
 msgid "Removed '%1'"
-msgstr ""
+msgstr "Rimosso '%1'"
 
 #: CRM/Contact/Form/Task/AlterPreferences.php
 msgid "%1 Contacts Updated"
-msgstr ""
+msgstr "%1 Contatti Aggiornati"
 
 #: CRM/Contact/Form/Task/AlterPreferences.php
 msgid "%1 Updated"
@@ -4574,7 +4575,7 @@ msgstr ""
 
 #: CRM/Contact/Form/Task/Email.php
 msgid "New Email"
-msgstr ""
+msgstr "Nuova Email"
 
 #: CRM/Contact/Form/Task/Email.php CRM/Contact/Form/Task/EmailCommon.php
 msgid ""
@@ -4944,7 +4945,7 @@ msgstr "Smart Group salvato come \"%1\"."
 
 #: CRM/Contact/Form/Task/SaveSearch.php CRM/Group/Form/Edit.php
 msgid "Group Saved"
-msgstr ""
+msgstr "Gruppo Salvato"
 
 #: CRM/Contact/Form/Task/Unhold.php
 msgid "Unhold Email"
@@ -5002,7 +5003,7 @@ msgstr "Email:"
 
 #: CRM/Contact/Form/Task/Useradd.php
 msgid "User Added"
-msgstr ""
+msgstr "Utente Aggiunto"
 
 #: CRM/Contact/Form/Task.php
 msgid "Confirm Action"
