--- a/po/it_IT/admin.po
+++ b/po/it_IT/admin.po
@@ -7,6 +7,7 @@
 # Andrea Ronchi <ronand@tiscali.it>, 2014,2016
 # barra <barra@greenbitweb.com>, 2012
 # Civvì <civvi68@gmail.com>, 2014
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # Francesco Moretto <francesco@moretto.it>, 2015
 # grdndr <gardo_jr@yahoo.it>, 2014
 # mitch.camp <kal-el@hotmail.it>, 2012
@@ -19,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-24 19:02+0000\n"
-"Last-Translator: Leonardo Armando Iarrusso <loppo9@hotmail.com>\n"
+"PO-Revision-Date: 2016-06-02 20:46+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2195,7 +2196,7 @@ msgstr ""
 
 #: ang/crmCxn/AdvTable.html
 msgid "Property"
-msgstr ""
+msgstr "Proprietà"
 
 #: ang/crmCxn/ConfirmConnectCtrl.html
 msgid "The application, \\\"%1\\\", requests permission to access your system."
@@ -2203,7 +2204,7 @@ msgstr ""
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Are you sure you want to reconnect \\\"%1\\\"?"
-msgstr ""
+msgstr "Sei sicuro di voler riconnettere \\\"%1\\\"?"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid ""
@@ -2235,7 +2236,7 @@ msgstr ""
 
 #: ang/crmCxn/Connectivity.html
 msgid "See also:"
-msgstr ""
+msgstr "Vedi anche:"
 
 #: ang/crmCxn/Connectivity.html
 msgid "Firewalls and Proxies"
@@ -2249,7 +2250,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Existing Connections"
-msgstr ""
+msgstr "Connessioni Esistenti"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: About"
@@ -2307,7 +2308,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "New Connections"
-msgstr ""
+msgstr "Nuove Connessioni"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
@@ -2331,27 +2332,27 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connecting..."
-msgstr ""
+msgstr "Connessione..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connected"
-msgstr ""
+msgstr "Connesso"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnecting..."
-msgstr ""
+msgstr "Riconnessione..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnected"
-msgstr ""
+msgstr "Riconnesso"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnecting..."
-msgstr ""
+msgstr "Disconnessione..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnected"
-msgstr ""
+msgstr "Disconnesso"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid ""
@@ -2369,19 +2370,19 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "External Link"
-msgstr ""
+msgstr "Link Esterno"
 
 #: ang/crmCxn/PermTable.html
 msgid "Action(s)"
-msgstr ""
+msgstr "Azione(i)"
 
 #: ang/crmCxn/PermTable.html
 msgid "Filter(s)"
-msgstr ""
+msgstr "Filtro(i)"
 
 #: ang/crmCxn/PermTable.html
 msgid "Field(s)"
-msgstr ""
+msgstr "Campo(i)"
 
 #: ang/crmCxn/PermTable.html
 msgid ""
