po: update po/fr_FR/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/mailing.po
+++ b/po/fr_FR/mailing.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-27 13:12+0000\n"
+"PO-Revision-Date: 2016-06-02 14:19+0000\n"
 "Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -352,7 +352,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Testing Criteria"
-msgstr ""
+msgstr "Critères de test"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "Winner Criteria"
@@ -1179,7 +1179,7 @@ msgstr "Adresse électronique"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
-msgstr ""
+msgstr "Groupe de désabonnement"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "No content to preview"
@@ -1203,11 +1203,11 @@ msgstr "Courriel de test"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to %1"
-msgstr ""
+msgstr "Envoyer un courriel de test à %1"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test"
-msgstr ""
+msgstr "Envoyer le test"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
@@ -1215,7 +1215,7 @@ msgstr "Envoyer un courriel de test au groupe :"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
-msgstr ""
+msgstr "Envoyer un message de test au groupe"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Send to %1"
@@ -1270,7 +1270,7 @@ msgstr "Exclure :"
 #: ang/crmMailing/PreviewComponentDialogCtrl.html
 #: ang/crmMailing/PreviewMgr/full.html ang/crmMailingAB/EditCtrl/edit.html
 msgid "Plain Text"
-msgstr "Texte brute"
+msgstr "Texte brut"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click Throughs"
@@ -1313,7 +1313,7 @@ msgstr "Envoyer à :"
 
 #: ang/crmMailing/BlockSummary.html ang/crmMailingAB/BlockSetup.html
 msgid "Select Campaign"
-msgstr ""
+msgstr "Sélectionnez une campagne"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click Throughs"
@@ -1383,7 +1383,7 @@ msgstr "Effacer le brouillon"
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Are you sure you want to permanently delete this mailing?"
-msgstr ""
+msgstr "Êtes-vous sûr de vouloir supprimer définitivement ce publipostage ?"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1405,7 +1405,7 @@ msgstr ""
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "(Estimating)"
-msgstr ""
+msgstr "(Estimation...)"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/PreviewRecipCtrl.html
 msgid "No recipients"
@@ -1606,7 +1606,7 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockSetup.html ang/crmMailingAB/ListCtrl.html
 msgid "Test Type"
-msgstr ""
+msgstr "Type de test"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Distribution"
@@ -1729,11 +1729,11 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Test A (%1)"
-msgstr ""
+msgstr "Test A (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Test B (%1)"
-msgstr ""
+msgstr "Test B (%1)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Final (%1)"
@@ -2603,11 +2603,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click-Throughs"
-msgstr ""
+msgstr "Clics"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click-Throughs"
-msgstr ""
+msgstr "Suivi des clics"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
