po: update po/it_IT/grant.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/grant.po
+++ b/po/it_IT/grant.po
@@ -4,13 +4,14 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Alessio <alessio@dba.it>, 2012
+# Francesco Garganese <francesco.garganese@aeromnia.aero>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-03 00:39+0000\n"
+"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,19 +29,19 @@ msgstr "La data di trasferimento denaro è nulla"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Application Received Date is NULL"
-msgstr "La data ricezione domanda è nulla"
+msgstr "Data della Richiesta di Contributo è NULL"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Due Date is NULL"
-msgstr "La data prevista di finanziamento è nulla"
+msgstr "Data Pagamento del Contributo è NULL"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
-msgstr "La data di decisione del finanziamento è nulla"
+msgstr "Data di Decisione del Contributo è NULL"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
-msgstr "Data di ricezione domanda - Da"
+msgstr "Data di ricezione richiesta - Da"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Money Sent Date - From"
@@ -52,15 +53,15 @@ msgstr "Data prevista report - Da"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date - From"
-msgstr "Data di decisione del finanziamento - da"
+msgstr "Data di decisione del Contributo - da"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant report received?"
-msgstr "Ricevuto report finanziamento?"
+msgstr "Ricevuto report Contributo?"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant ID"
-msgstr "ID Permesso"
+msgstr "ID Contributo"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Application received date"
@@ -72,11 +73,11 @@ msgstr "Data decisione"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Money transfer date"
-msgstr "Data trasferimento denaro"
+msgstr "Data trasferimento denaro del Contributo"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Due Date"
-msgstr ""
+msgstr "Data prevista Contributo"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant report received"
@@ -88,7 +89,7 @@ msgstr "Importo concesso"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Currency"
-msgstr ""
+msgstr "Valuta del Contributo"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant Rationale"
@@ -96,7 +97,7 @@ msgstr ""
 
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
-msgstr "Report finanziamento ricevuto?"
+msgstr "Report Contributo ricevuto?"
 
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
@@ -104,7 +105,7 @@ msgstr "Importo richiesto<br />(valuta originale)"
 
 #: CRM/Grant/Form/Grant.php
 msgid "Applicant"
-msgstr ""
+msgstr "Applicante"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -126,11 +127,11 @@ msgstr "Stampa elenco finanziamenti"
 
 #: CRM/Grant/Form/Task/Update.php CRM/Grant/Task.php
 msgid "Update Grants"
-msgstr ""
+msgstr "Aggiorna Contributi"
 
 #: CRM/Grant/Form/Task/Update.php
 msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr ""
+msgstr "Aggiorna Contributo(i): %1 (Totale Selezionati: %2)"
 
 #: CRM/Grant/Info.php
 msgid "access CiviGrant"
@@ -138,15 +139,15 @@ msgstr ""
 
 #: CRM/Grant/Info.php
 msgid "View all grants"
-msgstr ""
+msgstr "Mostra tutti i contributi"
 
 #: CRM/Grant/Info.php
 msgid "edit grants"
-msgstr ""
+msgstr "modifica contributi"
 
 #: CRM/Grant/Info.php
 msgid "Create and update grants"
-msgstr ""
+msgstr "Crea e aggiorna contributi"
 
 #: CRM/Grant/Info.php
 msgid "delete in CiviGrant"
@@ -154,23 +155,23 @@ msgstr ""
 
 #: CRM/Grant/Info.php
 msgid "Delete grants"
-msgstr ""
+msgstr "Cancella contributi"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
-msgstr "finanziamenti"
+msgstr "contributi"
 
 #: CRM/Grant/Selector/Search.php
 msgid "View Grant"
-msgstr "Visualizza finanziamento"
+msgstr "Visualizza Contributo"
 
 #: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
-msgstr "Modifica Finanziamento"
+msgstr "Modifica Contributo"
 
 #: CRM/Grant/Selector/Search.php
 msgid "Delete Grant"
-msgstr "Elimina finanziamento"
+msgstr "Elimina Contributo"
 
 #: CRM/Grant/Selector/Search.php
 msgid "Requested"
@@ -178,27 +179,27 @@ msgstr "Richiesto"
 
 #: CRM/Grant/Selector/Search.php
 msgid "Granted"
-msgstr ""
+msgstr "Contribuito"
 
 #: CRM/Grant/Task.php
 msgid "Export Grants"
-msgstr "Pemessi esportati"
+msgstr "Esporta Contributi"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
-msgstr "Sei sicuro di voler cancellare questo permesso"
+msgstr "Sei sicuro di voler cancellare questo Contributo?"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Amount requested for grant in original currency (if different)."
-msgstr "Importo richiesto per il finanziamento nella valuta originale (se diverso)."
+msgstr "Importo richiesto per il contributo nella valuta originale (se diverso)."
 
 #: templates/CRM/Grant/Form/Grant.tpl templates/CRM/Grant/Form/Task/Update.tpl
 msgid "Date on which the grant decision was finalized."
-msgstr "Data della decisione di finanziamento definitiva."
+msgstr "Data in cui la decisione del contributo è diventata definitiva."
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Date on which the grant money was transferred."
-msgstr "Data di trasferimento dei fondi del finanziamento."
+msgstr "Data in cui il denaro del contributo è stato trasferito."
 
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
@@ -210,7 +211,7 @@ msgstr ""
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Type(s)"
-msgstr ""
+msgstr "Tipo(i) Contributo"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -228,14 +229,14 @@ msgstr "Usate questo modulo per trovare i finanziamenti in base al nome del cont
 
 #: templates/CRM/Grant/Form/Selector.tpl
 msgid "List more Grants"
-msgstr "Visualizza altri finanziamenti"
+msgstr "Visualizza altri contributi"
 
 #: templates/CRM/Grant/Form/Task/Delete.tpl
 msgid ""
 "Are you sure you want to delete the selected Grants? This delete operation "
 "cannot be undone and will delete all transactions associated with these "
 "grants."
-msgstr "Vuoi davvero rimuovere i finanziamenti selezionati? L'operazione non può più essere annullata e cancellerà tutte le transazioni associate con i finanziamenti."
+msgstr "Vuoi davvero rimuovere i contributi selezionati? L'operazione non può più essere annullata e cancellerà tutte le transazioni associate con questi contributi."
 
 #: templates/CRM/Grant/Form/Task/Print.tpl
 msgid "Amount Requested(orig. currency)"
@@ -243,7 +244,7 @@ msgstr "Importo richiesto (valuta originale)"
 
 #: templates/CRM/Grant/Form/Task/Print.tpl
 msgid "Application Recieved"
-msgstr "Domanda pervenuta"
+msgstr "Richiesta pervenuta"
 
 #: templates/CRM/Grant/Form/Task/SearchTaskHookSample.tpl
 msgid "Decision Date"
@@ -253,7 +254,7 @@ msgstr "Data decisione"
 msgid ""
 "Enter values for the fields you wish to update. Leave fields blank to "
 "preserve existing values."
-msgstr ""
+msgstr "Digita i valori per i campi che desideri aggiornare. Lascia i campi vuoti per preservare i valori esistenti."
 
 #: templates/CRM/Grant/Form/Task/Update.tpl templates/CRM/Grant/Form/Task.tpl
 msgid "Number of selected grants: %1"
@@ -267,11 +268,11 @@ msgid ""
 "the grantee. Once you've located or created the contact record, click "
 "<strong>View</strong> to go to their summary page, select the "
 "<strong>Grants</strong> tab and click <strong>New Grant</strong>."
-msgstr "CiviGrant permette di inserire e tenere traccia dei finanziamenti alle Organizzazioni, Individui o Famiglie. Chi riceve il finanziamento deve essere prima inserito come contatto in CiviCRM. Usa <a href='%1'>Trova contatti</a> per vedere se esiste già un record corrispondente. Una volta trovato o creato il record del contatto, clicca su <strong>Visualizza</strong> per andare sulla pagina riassuntiva del contatto, seleziona <strong>Finanziamenti</strong> e clicca su <strong>Nuovo finanziamento</strong>. "
+msgstr "CiviGrant permette di inserire e tenere traccia dei contributi alle Organizzazioni, Individui o Famiglie. Chi riceve il finanziamento deve essere prima inserito come contatto in CiviCRM. Usa <a href='%1'>Trova contatti</a> per vedere se esiste già un record corrispondente. Una volta trovato o creato il record del contatto, clicca su <strong>Visualizza</strong> per andare sulla pagina riassuntiva del contatto, seleziona <strong>Finanziamenti</strong> e clicca su <strong>Nuovo finanziamento</strong>. "
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid "Grants Summary"
-msgstr "Riassunto finanziamenti"
+msgstr "Riassunto Contributi"
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid ""
@@ -285,7 +286,7 @@ msgstr "Questa tabella fornisce un riassunto di <strong>Totali finanziamenti</st
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid "Number of grants"
-msgstr "Numero finanziamenti"
+msgstr "Numero dei contributi"
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid "TOTAL"
@@ -293,28 +294,28 @@ msgstr "TOTALE"
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid "You have no Grants registered in your database."
-msgstr "Nel database non sono registrati finanziamenti"
+msgstr "Non hai Contributi registrati nel tuo database."
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid "Recent Grants"
-msgstr "Finanziamenti recenti"
+msgstr "Contributi Recenti"
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "This page lists all grants for %1 since inception."
-msgstr "Questa pagina elenca tutte i permessi per l' %1 dall'inizio."
+msgstr "Questa pagina elenca tutte i contributi per l' %1 dall'inizio."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr ""
+msgstr "Clicca <a %1>Aggiungi Contributo</a> per registrare un Contributo per questo contatto."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
-msgstr "Nessun permesso memorizzato da parte di questo contatto."
+msgstr "Nessun contributo è stato registrato per questo contatto."
 
 #: CRM/Grant/Task.php
 msgid "Export grants"
-msgstr ""
+msgstr "Esporta contributi"
 
 #: CRM/Grant/Task.php
 msgid "Update grants"
-msgstr ""
+msgstr "Aggiorna contributi"
